--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,3 +91,157 @@ li.logo span {
     display: block;
     font-size: 14px;
 }
+
+/* MAIN */
+
+main {
+    background: url(../../assets/img/bg.png) repeat;
+    padding-left: 190px;
+}
+
+.container {
+    width: 95%;
+}
+
+h3 {
+    font-weight: 200;
+    margin-bottom: 60px;
+    margin-top: 0;
+    padding: 30px 40px;
+    text-transform: uppercase;
+}
+
+.section {
+    padding-bottom: 30px;
+    padding-top: 0;
+    position: relative;
+}
+
+/* INTRO SECTION */
+
+.full-height {
+    height: 100vh;
+}
+
+.social {
+    margin: 0 auto;
+    width: auto;
+    text-align: inherit;
+}
+
+.icon-btn {
+    margin-left: auto;
+    width: 50px;
+    height: 50px;
+    border: 0;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 30px;
+    line-height: 70px;
+    border-radius: 45px;
+    display: inline-block;
+    margin: 4px;
+}
+
+.github {
+    color: black;
+}
+
+.linkedin {
+    color: #0077b5;
+}
+
+.icon-btn:hover {
+    transform: scale(1.1);
+    color: #ffffff;
+}
+
+.linkedin:hover {
+    background-color: #0077b5;
+}
+
+.github:hover {
+    background-color: black;
+}
+
+.readme {
+    position: relative;
+    padding: 11px 35px;
+    background: #fff;
+    color: #00796b;
+    border: 2px solid #fff;
+    font-weight: 600;
+    font-size: 15px;
+    letter-spacing: 1px;
+    display: inline-block;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+
+.contactme {
+    position: relative;
+    padding: 11px 35px;
+    background: none;
+    color: #fff;
+    border: 2px solid #fff;
+    font-weight: 600;
+    font-size: 15px;
+    letter-spacing: 1px;
+    display: inline-block;
+    margin-top: 1.5em;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+
+.contactme:hover {
+    color: #00796b;
+    background-color: white;
+}
+
+#intro.section {
+    background: #a7ffeb repeat;
+    position: relative;
+}
+
+#intro.section .container {
+    color: white;
+    font-weight: 200;
+    left: 0;
+    position: absolute;
+    top: 0;
+}
+
+#intro.section .container *:not(span) {
+    font-weight: 300;
+    line-height: 150%;
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+}
+
+#intro.section .underline {
+    border-bottom: 5px solid #24305e;
+}
+
+#intro.section .teal {
+    padding: 0 10px;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.4);
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+.waves-effect.waves-blue .waves-ripple {
+    background-color: rgba(33, 150, 243, 0.2);
+}
+
+.teal-text {
+    color: #008073 !important;
+}
+
+.teal {
+    background-color: #008073 !important;
+}
