--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -245,3 +245,127 @@ h3 {
 .teal {
     background-color: #008073 !important;
 }
+
+/* EXPERIENCE SECTION */
+
+.card {
+    margin-bottom: 60px;
+}
+
+.card .role {
+    font-size: 1.25rem;
+    position: absolute;
+    right: 38px;
+    top: 35px;
+}
+
+.role-div {
+    margin-left: 20px;
+}
+
+.card li a {
+    margin-right: 0;
+    color: #333;
+    border-bottom: 2px solid #ffab40;
+}
+
+.card li a:hover {
+    color: #333;
+    font-weight: 500;
+}
+
+.card {
+    padding-bottom: 30px;
+}
+
+.card .card-content p {
+    padding: 5px 0 0;
+}
+
+.card h5 {
+    font-size: 1.5rem;
+    margin-bottom: -0.5rem;
+    margin-top: 2rem;
+}
+
+.card h6 {
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin-top: 2rem;
+    text-transform: uppercase;
+}
+
+#experience .card-action {
+    background-color: rgba(0, 0, 0, 0.02);
+    border: none;
+}
+
+#experience .card .col.s12.m2 a {
+    display: block;
+}
+
+#experience .card .col.s12.m2 a img {
+    max-height: 60px;
+}
+
+.card-action span {
+    font-size: 85%;
+    color: #666;
+}
+
+.card ul {
+    margin-bottom: 0;
+}
+
+.card ul li {
+    line-height: 200%;
+    list-style-type: disc;
+    margin-left: 24px;
+}
+
+.card ul li li {
+    color: #666;
+    font-size: 13px;
+}
+
+.card .card-title {
+    font-size: 24px;
+}
+
+.card .card-content .card-title {
+    line-height: 2.5rem;
+}
+
+.card i.right {
+    margin-left: 10px;
+}
+
+a.hoverline:hover {
+    border-bottom: 3px solid #004d40 !important;
+}
+
+#experience .card-content .row {
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
+}
+
+/* SKILLS SECTION */
+
+#skills .card.large {
+    height: 360px;
+}
+
+#skills h4 {
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+}
+
+#skills .col img.responsive-img {
+    margin: 0 auto;
+    max-height: 100px;
+    padding-bottom: 10px;
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+}
