feat: Education and contact section added

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -369,3 +369,9 @@ a.hoverline:hover {
     vertical-align: middle;
     display: table-cell;
 }
+
+#contact a:not(.btn-floating) {
+    bottom: 6px;
+    left: 20px;
+    position: relative;
+}
