feat: added profile picture in navbar for mobile phones

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,6 +92,16 @@ li.logo span {
     font-size: 14px;
 }
 
+.logo-small {
+	height: 150px;
+}
+
+.profile-pic-small {
+	display: block;
+	margin: auto;
+	margin-top: 15px;
+}
+
 /* MAIN */
 
 main {
